# IdenZero

./: .gitignore  API_DOCUMENTATION.md  LICENSE.md  README.md  STREAMLINED_API_SUMMARY.md  trusthire_sitemap.md
contract/: contract-abi.json  hardhat.config.js  package-lock.json  package.json  test-registration.js
contract/contracts/: SimpleJobPortal.sol
contract/scripts/: deploy.js
contract/test/: SimpleJobPortal.test.js
demo-ui/: .gitignore  enhanced-api-client.js  enhanced-demo.html  enhanced-profile.css  streamlined-demo.html
frontend/: .env.example  .gitignore  JOB_PORTAL_SETUP.md  MINTING_SETUP.md  README.md  deploy-to-vercel.sh  hardhat.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
frontend/public/: invoice-nft-demo.html
frontend/scripts/: run-ens-update.sh  setEnsRecords.js
frontend/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
gh-fetcher-octocrab/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PRODUCTION.md  README.md  README_COMPREHENSIVE.md  demo_skill_analysis.json  example.sh
gh-fetcher-octocrab/src/: analyzer.rs  analyzer_complex.rs  analyzer_methods_1.rs  analyzer_methods_2.rs  analyzer_methods_3.rs  analyzer_methods_4.rs  analyzer_old.rs  analyzer_structs.rs  api_server.rs  frontend_adapter.rs  iden_score.rs  improved_analyzer.rs  lib.rs  main.rs  main_old.rs  streamlined_analyzer.rs  summary_generator.rs
sbt_contract/: PROJECT_SUMMARY.md  README.md  package-lock.json  package.json
self_backend/: index.js  package.json  test_index.js
(+48 files in other folders)
