[package]
name = "trusthire-skill-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
octocrab = "0.32"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.0"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
rayon = "1.7"
rand = "0.8"